[package]
name = "mongobenchmark"
version = "0.1.0"
authors = ["Miguel Rivero <charrinton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["sync"]

[profile.release]
lto = true